--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -190,8 +190,8 @@ import Contactbtn from "@components/contactbtn.astro";
 <a style="width:120px" title="Same day bar refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 <span style="padding:0 20px 0 0;">
-<img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-gas-dryer-repair.webp" alt="Same day Gas Dryer Repair Services">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Gas Dryer Repair</p>
+<img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-fryer-repair.webp" alt="Same day Commercial Fryer Repair Services">
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Commercial Fryer Repair</p>
 <a style="width:120px" title="Same day gas dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 <span style="padding:0 20px 0 0;">
