--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -198,19 +198,19 @@ descriptio: "Appliance Repair in Pasadena"
 <a style="width:120px" title="Same day bar refrigerator repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 <span style="padding:0 20px 0 0;">
-<img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-gas-dryer-repair.webp" alt="Same day Gas Dryer Repair Services">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Gas Dryer Repair</p>
-<a style="width:120px" title="Same day gas dryer repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
+<img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-fryer-repair.webp" alt="Same day Commercial Fryer Repair Services">
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Commercial Fryer Repair</p>
+<a style="width:120px" title="Book Same day gas Commercial Fryer Repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 <span style="padding:0 20px 0 0;">
 <img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-laundry-speed-queen-repair.webp" alt="Same day Laundry Speed Queen Repair Services">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Laundry Speed Queen Repair</p>
-<a style="width:120px" title="Same day Laundry Speed Queen repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
+<a style="width:120px" title="Book Same day Laundry Speed Queen repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 <span style="padding:0 20px 0 0;">
 <img loading="lazy" width="120" height="150" loading="lazy" src="/../images/wine-cellar-reapir.webp" alt="Same day Wine Cellar Repair Services">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Wine Cellar Repair</p>
-<a style="width:120px" title="Same day wine cellar repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
+<a style="width:120px" title="Book Same day wine cellar repair Pasadena" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 </div>
 <p>We understand that repairing commercial appliances can be challenging due to their larger size and complexity compared to household ones. Hence, our technicians undergo specialized training in order to effectively troubleshoot any issues with your appliances. Whether it’s a malfunctioning refrigerator at your restaurant or an office printer causing disruptions, you can rely on us for prompt solutions from experienced professionals.</p>
