--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -18,6 +18,7 @@ const menuitems = [
     { title: "Los Feliz", path: "/areas/los-feliz" },
       { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
       { title: "Santa Monica", path: "/areas/santa-monica" },
+      { title: "Los Angeles County", path: "/areas/los-angeles-and-surrounding-areas" },
     ],
   },
   {
