--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -212,7 +212,7 @@ import Layout from "@layouts/Layout.astro";
 
 <img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
 
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;"><a title="commercial regrigerator repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles">Refrigerator Repair</a></p>
 
 <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 
