--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -116,7 +116,7 @@ import Contactbtn from "@components/contactbtn.astro";
 <div class="category-items d-flex justify-content-between">
 <span style="padding:0 20px 0 0;">
 <img loading="lazy" width="120" height="150" loading="lazy" src="/../images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
+<p style="width:120px; font-size:12px; line-height:16px; "><a style="margin:0!important; padding: 0!Important; font-size:12px!Important;" title="commercial regrigerator repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles">Refrigerator Repair</a></p>
 <a style="width:120px" title="Same day refrigerator repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
 </span>
 <span style="padding:0 20px 0 0;">
