--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="">
+<Layout title="Same Day Appliance Repair - Book Today">
   <Container>
     <Hero />
     <Features />
@@ -36,7 +36,7 @@ import Layout from "@layouts/Layout.astro";
               <div class="category-items d-flex justify-content-between">
                <span style='padding:0 20px 0 0;' title='Same day refrigerator repair Los Angeles'>
 <img width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Refrigerator Repair</p>
+<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;"><a>Refrigerator Repair</a></p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
  <span style='padding:0 20px 0 0;'>
