--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -138,7 +138,7 @@ import { Icon } from "astro-icon";
 </div> 
   </div>
   <div class="text-lg mt-4 text-slate-600 max-w-xl">
-      <img width="480" height="480" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
+      <img alt="Same Day Appliance Repair" width="480" height="480" style="border-radius: 25px;" src="/images/same-day-appliance-repair-experts.webp">
      
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
