--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -274,7 +274,7 @@ const makeTitle = title
   .anchor{color:#124ded; font-size:17px;}
     .anchor:hover{text-decoration: underline;}
    /*header for pages*/
-
+/*two column layout*/
 @media (min-width: 950px){
   .two-col-grid {display:inline-grid }
 .col-one {grid-column: 1}
