--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -281,8 +281,18 @@ const makeTitle = title
 .col-two{grid-column:2}
 }
 .col-one{margin:0 20px 15px 0;}
-  
 
+/*six column grid for images*/
+  
+@media (min-width: 870px){
+  .six-col-grid {display:inline-grid }
+.col-one-img {grid-column: 1}
+.col-two-img{grid-column:2}
+.col-three-img{grid-column:3}
+.col-four-img{grid-column:4}
+.col-five-img{grid-column:5}
+.col-six-img{grid-column:6}
+}
     </style>
   </body>
 </html>
