--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,76 +33,73 @@ import Layout from "@layouts/Layout.astro";
              <br>
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
               <br>
-              <div class="category-items d-flex justify-content-between">
                 <div class="six-col-grid" >
-              <span style='padding:0 20px 0 0;' title='Same day refrigerator repair Los Angeles'>
+              <span class="col-one-img" style='padding:0 20px 0 0;' title='Same day refrigerator repair Los Angeles'>
 <img width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;"><a>Refrigerator Repair</a></p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
- <span style='padding:0 20px 0 0;'>
+ <span class="col-two-img" style='padding:0 20px 0 0;'>
 <img width="120" height="150" src="../images/freezer-stove-repair.webp" alt="Same day expert freezer repair - Los Angeles">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
 <a style="width:120px" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
- <span style="padding:0 20px 0 0;">
+ <span class="col-three-img" style="padding:0 20px 0 0;">
 <img width="120" height="150" src="images/washer-repair.webp" alt="Same day expert washer repair - Los Angeles">
 <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Washer Repair</p>
 <a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
 
- <span style="padding:0 20px 0 0;">
+ <span class="col-four-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/dryer-repair.webp" alt="Same day expert dryer repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dryer Repair</p>
                           <a style="width:120px" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
  <span style="padding:0 20px 0 0;">
-                          <img width="120" height="150" src="images/range-stove-repair.webp" alt="Same day expert range/stover repair - Los Angeles">
+                          <img class="col-five-img" width="120" height="150" src="images/range-stove-repair.webp" alt="Same day expert range/stover repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Range/Stove Repair</p>
                           <a style="width:120px" title="Same day range stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
                       <span style="padding:0 20px 0 0;">
-                          <img width="120" height="150" src="images/dishwasher-repair.webp" alt="Same day dishwasher repair - Los Angeles">
+                          <img class="col-six-img" width="120" height="150" src="images/dishwasher-repair.webp" alt="Same day dishwasher repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dishwasher Repair</p>
                           <a style="width:120px" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
-                        </span> </div>
-                        
-     <div class="category-items d-flex justify-content-between">
-     <span style='padding:0 20px 0 0;'' title='Same day refrigerator repair Los Angeles'>
+                        </span> 
+     <span class="col-one-img" style='padding:0 20px 0 0;'' title='Same day refrigerator repair Los Angeles'>
      <img width="120" height="150" src="../images/oven-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
      <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Oven Repair</p>
      <a style="width:120px" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
       </span> 
-      <span style='padding:0 20px 0 0;'>
+      <span class="col-two-img" style='padding:0 20px 0 0;'>
       <img width="120" height="150" src="../images/cooktop-repair.webp" alt="Same day expert freezer repair - Los Angeles">
        <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Coocktop Repair</p>
        <a style="width:120px" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                                        <span style="padding:0 20px 0 0;">
+                                        <span class="col-three-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/microwave-repair.webp" alt="Same day microwave repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Microwave Repair</p>
                           <a style="width:120px" title="Same day microvawe repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                                          <span style="padding:0 20px 0 0;">
+                                          <span class="col-four-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/range-hood-repair.webp" alt="Same day range hood repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Range Hood Repair</p>
                           <a style="width:120px" title="Same day range hood repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
             
-                        <span style="padding:0 20px 0 0;">
+                        <span class="col-five-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/fireplace-repair.webp" alt="Same day fireplace repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Fireplace Repair</p>
                           <a style="width:120px" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
-                                          <span style="padding:0 20px 0 0;">
+                                          <span class="col-six-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/bbq-grill-repair.webp" alt="Same day bbq grill repair - Los Angeles">
                           <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">BBQ Grill Repair</p>
                           <a style="width:120px" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                                  </div> </div></div>
+                                  </div>
           
           <!-- Grey BG-->
     <div class="category category-1" style="background-color:#F2F1F0">
