--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -286,7 +286,7 @@ const makeTitle = title
   
 @media (min-width: 870px){
   .six-col-grid {display:inline-grid }
-.col-one-img {grid-column: 1}
+.col-one-img {grid-column: 1; margin:0 20px 0 0; width:190px;}
 .col-two-img{grid-column:2}
 .col-three-img{grid-column:3}
 .col-four-img{grid-column:4}
