--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,10 +34,10 @@ import Layout from "@layouts/Layout.astro";
               <p>Our same day appliance repair experts will fix your appliance on the first visit in 90% of cases. Our trained technicians have parts on hand to ensure a quick repair.</p>
               <br>
                 <div class="six-col-grid" >
-              <span class="col-one-img" style='padding:0 20px 0 0;' title='Same day refrigerator repair Los Angeles'>
-<img width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;"><a>Refrigerator Repair</a></p>
-<a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+              <span class="col-one-img" title='Same day refrigerator repair Los Angeles'>
+<img style="margin:0 auto 0 auto;" width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
+<p style="font-size:16px; line-height:16px; text-align: center;"><a>Refrigerator Repair</a></p>
+<a style="width:120px; margin:0 0 0 37px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px; 20px;" title="Same day washer repair Los Angeles" href="/book">BOOK US </a>
 </span>
  <span class="col-two-img" style='padding:0 20px 0 0;'>
 <img width="120" height="150" src="../images/freezer-stove-repair.webp" alt="Same day expert freezer repair - Los Angeles">
