--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -284,14 +284,25 @@ const makeTitle = title
 
 /*six column grid for images*/
   
-@media (min-width: 870px){
+@media (min-width: 1150px){
   .six-col-grid {display:inline-grid }
-.col-one-img {grid-column: 1; margin:0 20px 0 0; width:190px;}
-.col-two-img{grid-column:2}
-.col-three-img{grid-column:3}
-.col-four-img{grid-column:4}
-.col-five-img{grid-column:5}
-.col-six-img{grid-column:6}
+  .six-col-grid img{margin:0 auto 0 auto;}
+  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
+  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
+ .grid-img{margin:0 auto 0 auto;}
+.col-one-img {grid-column: 1;width:190px;}
+.col-two-img{grid-column:2; width:190px;}
+.col-three-img{grid-column:3; width:190px;}
+.col-four-img{grid-column:4; width:190px;}
+.col-five-img{grid-column:; width:190px;}
+.col-six-img{grid-column:6; width:190px;}
+.col-seven-img {grid-column: 1;width:190px;}
+.col-eight-img{grid-column:2; width:190px;}
+.col-nine-img{grid-column:3; width:190px;}
+.col-ten-img{grid-column:4; width:190px;}
+.col-eleven-img{grid-column:; width:190px;}
+.col-twelve-img{grid-column:6; width:190px;}
+
 }
     </style>
   </body>
