--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,69 +35,69 @@ import Layout from "@layouts/Layout.astro";
               <br>
                 <div class="six-col-grid" >
               <span class="col-one-img" title='Same day refrigerator repair Los Angeles'>
-<img style="margin:0 auto 0 auto;" width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
-<p style="font-size:16px; line-height:16px; text-align: center;"><a>Refrigerator Repair</a></p>
-<a style="width:120px; margin:0 0 0 37px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px; 20px;" title="Same day washer repair Los Angeles" href="/book">BOOK US </a>
+<img width="120" height="150" src="../images/refrigerator-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
+<p><a>Refrigerator Repair</a></p>
+<a class="grid-a" title="Same day washer repair Los Angeles" href="/book">BOOK US </a>
 </span>
  <span class="col-two-img" style='padding:0 20px 0 0;'>
 <img width="120" height="150" src="../images/freezer-stove-repair.webp" alt="Same day expert freezer repair - Los Angeles">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Freezer Repair</p>
-<a style="width:120px" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+<p>Freezer Repair</p>
+<a class="grid-a" title='Same day freezer repair Los Angeles' href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
  <span class="col-three-img" style="padding:0 20px 0 0;">
 <img width="120" height="150" src="images/washer-repair.webp" alt="Same day expert washer repair - Los Angeles">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Washer Repair</p>
-<a style="width:120px" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+<p>Washer Repair</p>
+<a class="grid-a" title="Same day washer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
 </span>
 
  <span class="col-four-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/dryer-repair.webp" alt="Same day expert dryer repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dryer Repair</p>
-                          <a style="width:120px" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <p>Dryer Repair</p>
+                          <a class="grid-a" title="Same day dryer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
- <span style="padding:0 20px 0 0;">
-                          <img class="col-five-img" width="120" height="150" src="images/range-stove-repair.webp" alt="Same day expert range/stover repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Range/Stove Repair</p>
-                          <a style="width:120px" title="Same day range stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+ <span class="col-five-img" style="padding:0 20px 0 0;">
+                          <img width="120" height="150" src="images/range-stove-repair.webp" alt="Same day expert range/stover repair - Los Angeles">
+                          <p>Range/Stove Repair</p>
+                          <a class="grid-a" title="Same day range stove repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
-                      <span style="padding:0 20px 0 0;">
-                          <img class="col-six-img" width="120" height="150" src="images/dishwasher-repair.webp" alt="Same day dishwasher repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Dishwasher Repair</p>
-                          <a style="width:120px" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                      <span class="col-six-img" style="padding:0 20px 0 0;">
+                          <img width="120" height="150" src="images/dishwasher-repair.webp" alt="Same day dishwasher repair - Los Angeles">
+                          <p>Dishwasher Repair</p>
+                          <a class="grid-a" title="Same day dishwasher repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span> 
-     <span class="col-one-img" style='padding:0 20px 0 0;'' title='Same day refrigerator repair Los Angeles'>
+     <span class="col-seven-img" style='padding:0 20px 0 0;'' title='Same day refrigerator repair Los Angeles'>
      <img width="120" height="150" src="../images/oven-repair.webp" alt="Same day expert refrigerator repair - Los Angeles">
-     <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Oven Repair</p>
-     <a style="width:120px" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+     <p >Oven Repair</p>
+     <a class="grid-a" title="Same day oven repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
       </span> 
-      <span class="col-two-img" style='padding:0 20px 0 0;'>
+      <span class="col-eight-img" style='padding:0 20px 0 0;'>
       <img width="120" height="150" src="../images/cooktop-repair.webp" alt="Same day expert freezer repair - Los Angeles">
-       <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Coocktop Repair</p>
-       <a style="width:120px" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+       <p>Coocktop Repair</p>
+       <a class="grid-a" title="Same day freezer repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                                        <span class="col-three-img" style="padding:0 20px 0 0;">
+                                        <span class="col-nine-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/microwave-repair.webp" alt="Same day microwave repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Microwave Repair</p>
-                          <a style="width:120px" title="Same day microvawe repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <p>Microwave Repair</p>
+                          <a class="grid-a" title="Same day microvawe repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
-                                          <span class="col-four-img" style="padding:0 20px 0 0;">
+                                          <span class="col-ten-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/range-hood-repair.webp" alt="Same day range hood repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Range Hood Repair</p>
-                          <a style="width:120px" title="Same day range hood repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <p>Range Hood Repair</p>
+                          <a class="grid-a" title="Same day range hood repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
             
-                        <span class="col-five-img" style="padding:0 20px 0 0;">
+                        <span class="grid-img" class="col-eleven-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/fireplace-repair.webp" alt="Same day fireplace repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Fireplace Repair</p>
-                          <a style="width:120px" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <p>Fireplace Repair</p>
+                          <a class="grid-a" title="Expert fireplace repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
 
-                                          <span class="col-six-img" style="padding:0 20px 0 0;">
+                                          <span class="col-twelve-img" style="padding:0 20px 0 0;">
                           <img width="120" height="150" src="images/bbq-grill-repair.webp" alt="Same day bbq grill repair - Los Angeles">
-                          <p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">BBQ Grill Repair</p>
-                          <a style="width:120px" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
+                          <p>BBQ Grill Repair</p>
+                          <a class="grid-a" title="Same day bbq grill repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
                         </span>
                                   </div>
           
