--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -283,8 +283,7 @@ const makeTitle = title
 .col-one{margin:0 20px 15px 0;}
 
 /*six column grid for images*/
-  
-@media (min-width: 1150px){
+
   .six-col-grid {display:inline-grid }
   .six-col-grid img{margin:0 auto 0 auto;}
   .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
@@ -294,15 +293,92 @@ const makeTitle = title
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:3; width:190px;}
 .col-four-img{grid-column:4; width:190px;}
-.col-five-img{grid-column:; width:190px;}
+.col-five-img{grid-column:5; width:190px;}
 .col-six-img{grid-column:6; width:190px;}
 .col-seven-img {grid-column: 1;width:190px;}
 .col-eight-img{grid-column:2; width:190px;}
 .col-nine-img{grid-column:3; width:190px;}
 .col-ten-img{grid-column:4; width:190px;}
-.col-eleven-img{grid-column:; width:190px;}
+.col-eleven-img{grid-column:5; width:190px;}
 .col-twelve-img{grid-column:6; width:190px;}
 
+
+@media (max-width: 1180px){
+  .six-col-grid {display:inline-grid }
+  .six-col-grid img{margin:0 auto 0 auto;}
+  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
+  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
+ .grid-img{margin:0 auto 0 auto;}
+.col-one-img {grid-column: 1;width:190px;}
+.col-two-img{grid-column:2; width:190px;}
+.col-three-img{grid-column:3; width:190px;}
+.col-four-img{grid-column:4; width:190px;}
+.col-five-img{grid-column:5; width:190px;}
+.col-six-img{grid-column:1; width:190px;}
+.col-seven-img {grid-column: 2;width:190px;}
+.col-eight-img{grid-column:3; width:190px;}
+.col-nine-img{grid-column:4; width:190px;}
+.col-ten-img{grid-column:5; width:190px;}
+.col-eleven-img{grid-column:1; width:190px;}
+.col-twelve-img{grid-column:2; width:190px;}
+}
+@media (max-width: 990px){
+  .six-col-grid {display:inline-grid }
+  .six-col-grid img{margin:0 auto 0 auto;}
+  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
+  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
+ .grid-img{margin:0 auto 0 auto;}
+.col-one-img {grid-column: 1;width:190px;}
+.col-two-img{grid-column:2; width:190px;}
+.col-three-img{grid-column:3; width:190px;}
+.col-four-img{grid-column:4; width:190px;}
+.col-five-img{grid-column:1; width:190px;}
+.col-six-img{grid-column:2; width:190px;}
+.col-seven-img {grid-column:3;width:190px;}
+.col-eight-img{grid-column:4; width:190px;}
+.col-nine-img{grid-column:1; width:190px;}
+.col-ten-img{grid-column:2; width:190px;}
+.col-eleven-img{grid-column:3; width:190px;}
+.col-twelve-img{grid-column:4; width:190px;}
+}
+
+@media (max-width: 800px){
+  .six-col-grid {display:inline-grid }
+  .six-col-grid img{margin:0 auto 0 auto;}
+  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
+  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
+ .grid-img{margin:0 auto 0 auto;}
+.col-one-img {grid-column: 1;width:190px;}
+.col-two-img{grid-column:2; width:190px;}
+.col-three-img{grid-column:3; width:190px;}
+.col-four-img{grid-column:1; width:190px;}
+.col-five-img{grid-column:2; width:190px;}
+.col-six-img{grid-column:3; width:190px;}
+.col-seven-img {grid-column: 1;width:190px;}
+.col-eight-img{grid-column:2; width:190px;}
+.col-nine-img{grid-column:3; width:190px;}
+.col-ten-img{grid-column:1; width:190px;}
+.col-eleven-img{grid-column:2; width:190px;}
+.col-twelve-img{grid-column:3; width:190px;}
+}
+@media (max-width: 620px){
+  .six-col-grid {display:inline-grid }
+  .six-col-grid img{margin:0 auto 0 auto;}
+  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
+  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
+ .grid-img{margin:0 auto 0 auto;}
+.col-one-img {grid-column: 1;width:190px;}
+.col-two-img{grid-column:2; width:190px;}
+.col-three-img{grid-column:1; width:190px;}
+.col-four-img{grid-column:2; width:190px;}
+.col-five-img{grid-column:1; width:190px;}
+.col-six-img{grid-column:2; width:190px;}
+.col-seven-img {grid-column: 1;width:190px;}
+.col-eight-img{grid-column:2; width:190px;}
+.col-nine-img{grid-column:1; width:190px;}
+.col-ten-img{grid-column:2; width:190px;}
+.col-eleven-img{grid-column:1; width:190px;}
+.col-twelve-img{grid-column:2; width:190px;}
 }
     </style>
   </body>
