--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -123,7 +123,8 @@ const makeTitle = title
 /*Truck Driving Animation */
 .loop-wrapper { width:100%;
   background-color: #1a1b1b;
-  margin: 0 auto;
+  border-radius: 5px;;
+  margin: 10px auto;
   position: relative;
   display: block;
   height: 120px;
@@ -284,11 +285,10 @@ const makeTitle = title
 
 /*six column grid for images*/
 
-  .six-col-grid {display:inline-grid }
+  .six-col-grid {display:inline-grid; place-items: center; width:100%;}
   .six-col-grid img{margin:0 auto 0 auto;}
   .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
   .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
- .grid-img{margin:0 auto 0 auto;}
 .col-one-img {grid-column: 1;width:190px;}
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:3; width:190px;}
@@ -304,11 +304,6 @@ const makeTitle = title
 
 
 @media (max-width: 1180px){
-  .six-col-grid {display:inline-grid }
-  .six-col-grid img{margin:0 auto 0 auto;}
-  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
-  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
- .grid-img{margin:0 auto 0 auto;}
 .col-one-img {grid-column: 1;width:190px;}
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:3; width:190px;}
@@ -323,11 +318,6 @@ const makeTitle = title
 .col-twelve-img{grid-column:2; width:190px;}
 }
 @media (max-width: 990px){
-  .six-col-grid {display:inline-grid }
-  .six-col-grid img{margin:0 auto 0 auto;}
-  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
-  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
- .grid-img{margin:0 auto 0 auto;}
 .col-one-img {grid-column: 1;width:190px;}
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:3; width:190px;}
@@ -343,11 +333,6 @@ const makeTitle = title
 }
 
 @media (max-width: 800px){
-  .six-col-grid {display:inline-grid }
-  .six-col-grid img{margin:0 auto 0 auto;}
-  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
-  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
- .grid-img{margin:0 auto 0 auto;}
 .col-one-img {grid-column: 1;width:190px;}
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:3; width:190px;}
@@ -361,12 +346,7 @@ const makeTitle = title
 .col-eleven-img{grid-column:2; width:190px;}
 .col-twelve-img{grid-column:3; width:190px;}
 }
-@media (max-width: 620px){
-  .six-col-grid {display:inline-grid }
-  .six-col-grid img{margin:0 auto 0 auto;}
-  .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
-  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
- .grid-img{margin:0 auto 0 auto;}
+@media (max-width: 610px){
 .col-one-img {grid-column: 1;width:190px;}
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:1; width:190px;}
