--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -288,7 +288,7 @@ const makeTitle = title
   .six-col-grid {display:inline-grid; place-items: center; width:100%;}
   .six-col-grid img{margin:0 auto 0 auto;}
   .six-col-grid p{font-size:16px; line-height:16px; text-align: center;}
-  .grid-a{width:120px; margin:0 0 0 30px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
+  .grid-a{width:120px; margin:0 0 0 40px; background-color:#000000; color:#ffffff; border-radius:5px; padding:10px 20px 10px 20px;}
 .col-one-img {grid-column: 1;width:190px;}
 .col-two-img{grid-column:2; width:190px;}
 .col-three-img{grid-column:3; width:190px;}
@@ -301,6 +301,11 @@ const makeTitle = title
 .col-ten-img{grid-column:4; width:190px;}
 .col-eleven-img{grid-column:5; width:190px;}
 .col-twelve-img{grid-column:6; width:190px;}
+.col-thirteen-img{grid-column:1; width:190px;}
+.col-fourteen-img{grid-column:2; width:190px;}
+.col-fithteen-img{grid-column:3; width:190px;}
+.col-sixteen-img{grid-column:4; width:190px;}
+.col-seventeen-img{grid-column:5; width:190px;}
 
 
 @media (max-width: 1180px){
@@ -316,6 +321,11 @@ const makeTitle = title
 .col-ten-img{grid-column:5; width:190px;}
 .col-eleven-img{grid-column:1; width:190px;}
 .col-twelve-img{grid-column:2; width:190px;}
+.col-thirteen-img{grid-column:3; width:190px;}
+.col-fourteen-img{grid-column:4; width:190px;}
+.col-fithteen-img{grid-column:5; width:190px;}
+.col-sixteen-img{grid-column:1; width:190px;}
+.col-seventeen-img{grid-column:2; width:190px;}
 }
 @media (max-width: 990px){
 .col-one-img {grid-column: 1;width:190px;}
@@ -330,6 +340,11 @@ const makeTitle = title
 .col-ten-img{grid-column:2; width:190px;}
 .col-eleven-img{grid-column:3; width:190px;}
 .col-twelve-img{grid-column:4; width:190px;}
+.col-thirteen-img{grid-column:1; width:190px;}
+.col-fourteen-img{grid-column:2; width:190px;}
+.col-fithteen-img{grid-column:3; width:190px;}
+.col-sixteen-img{grid-column:4; width:190px;}
+.col-seventeen-img{grid-column:1; width:190px;}
 }
 
 @media (max-width: 800px){
@@ -345,6 +360,11 @@ const makeTitle = title
 .col-ten-img{grid-column:1; width:190px;}
 .col-eleven-img{grid-column:2; width:190px;}
 .col-twelve-img{grid-column:3; width:190px;}
+.col-thirteen-img{grid-column:1; width:190px;}
+.col-fourteen-img{grid-column:2; width:190px;}
+.col-fithteen-img{grid-column:3; width:190px;}
+.col-sixteen-img{grid-column:1; width:190px;}
+.col-seventeen-img{grid-column:2; width:190px;}
 }
 @media (max-width: 610px){
 .col-one-img {grid-column: 1;width:190px;}
@@ -359,6 +379,11 @@ const makeTitle = title
 .col-ten-img{grid-column:2; width:190px;}
 .col-eleven-img{grid-column:1; width:190px;}
 .col-twelve-img{grid-column:2; width:190px;}
+.col-thirteen-img{grid-column:1; width:190px;}
+.col-fourteen-img{grid-column:2; width:190px;}
+.col-fithteen-img{grid-column:1; width:190px;}
+.col-sixteen-img{grid-column:2; width:190px;}
+.col-seventeen-img{grid-column:1; width:190px;}
 }
     </style>
   </body>
