--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -224,38 +224,38 @@ import Contactbtn from "@components/contactbtn.astro";
 <h3 id="heating">Heating Ventilation And Air-Conditioning Service, Repair And Installation</h3><a href="#top"><img loading="lazy" alt="Go back to the top of the page" width="50" height="50" src="/images/back_to_top.png"></a>
 <p>Expert repair and installation of heating ventilation and AC by our trained technicians</p>
 <br>
-<div class="category-items d-flex justify-content-between">
-<span style="padding:0 20px 0 0;">
-<img loading="lazy" width="120" height="122" loading="lazy" src="/../images/air-conditioner-repair-installation.webp" alt="Same day Refrigerator Repair Los Angeles">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Air conditioner Repair</p>
-<a style="width:120px" title="Same day air conditioner repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
+<div class="six-col-grid">
+    <span class="col-one-img">
+       <img width="120" height="122" loading="lazy" src="/../images/air-conditioner-repair-installation.webp" alt="Same day Refrigerator Repair Los Angeles">
+       <p>Air conditioner Repair</p>
+         <a class="grid-a" title="Same day air conditioner repair Los Angeles" href="/book">BOOK US </a>
 </span>
-<span style="padding:0 20px 0 0;">
-<img loading="lazy" width="120" height="122" loading="lazy" src="/../images/furnace-repair-installation.webp" alt="Same day Refrigerator Repair - Los Angeles ">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Furnace Repair</p>
-<a style="width:120px" title="Same day furnce repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
+    <span class="col-two-img">
+                        <img width="120" height="122" loading="lazy" src="/../images/furnace-repair-installation.webp" alt="Same day Refrigerator Repair - Los Angeles">
+                        <p>Furnace Repair</p>
+                        <a class="grid-a" title="Same day furnce repair Los Angeles" href="/book">BOOK US </a>
 </span>
-<span style="padding:0 20px 0 0;">
-<img loading="lazy" width="120" height="122" loading="lazy" src="/../images/heat-pump-repair-installation.webp" alt="Same day Refrigerator repair Los Angeles">
-<p style="width:110px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Heat Pump Repair</p>
-<a style="width:110px" title="Same day heat pump repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
-</span>
-<span style="padding:0 20px 0 0;">
-<img loading="lazy" width="110" height="122" loading="lazy" src="/../images/water-heater-repair-installation.webp" alt="Same day Dryer repair Los Angeles">
-<p style="width:110px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Water Heater Repair</p>
-<a style="width:110px" title="Same day water heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
-</span>
-<span style="padding:0 20px 0 0;">
-<img loading="lazy" width="120" height="122" loading="lazy" src="/../images/wall-heater-repair-installation.webp" alt="Range/Stove">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Wall heater Repair</p>
-<a style="width:120px" title="Same day wall heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
-</span>
-<span title="Same day duckts cleaning repair Los Angeles" style="padding:0 20px 0 0">
-<img loading="lazy" width="120" height="122" loading="lazy" src="/../images/duck-cleaning.webp" alt="Range/Stove">
-<p style="width:120px; font-size:16px; line-height:18px; margin:10px auto 10px auto;">Ducts Cleaning Repair</p>
-<a style="width:120px" title="Same day wall heater repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800 border-2 border-transparent">BOOK US </a>
-</span>
-</div>
+    <span class="col-three-img">
+                        <img width="120" height="122" loading="lazy" src="/../images/heat-pump-repair-installation.webp" alt="Same day Refrigerator repair Los Angeles">
+                        <p>Heat Pump Repair</p>
+                        <a class="grid-a" title="Same day heat pump repair Los Angeles" href="/book">BOOK US </a>
+                      </span>
+                      <span class="col-four-img">
+                        <img width="120" height="122" loading="lazy" src="/../images/water-heater-repair-installation.webp" alt="Same day Dryer repair Los Angeles">
+                        <p>Water Heater Repair</p>
+                        <a class="grid-a" title="Same day water heater repair Los Angeles" href="/book">BOOK US </a>
+                      </span>
+                       <span class="col-five-img">
+                        <img width="120" height="122" loading="lazy" src="/../images/wall-heater-repair-installation.webp" alt="Range/Stove">
+                        <p>Wall heater Repair</p>
+                        <a class="grid-a" title="Same day wall heater repair Los Angeles" href="/book">BOOK US </a>
+                      </span>
+                        <span class="col-six-img">
+                        <img width="120" height="122" loading="lazy" src="/../images/duck-cleaning.webp" alt="Range/Stove">
+                        <p>Ducts Cleaning Repair</p>
+                        <a class="grid-a" title="Same day wall heater repair Los Angeles" href="/book">BOOK US </a>
+                      </span>
+                                        </div>
 <p>Business operations rely on functional commercial appliances. We provide prompt, effective repairs tailored to the specific needs of businesses, understanding the importance of minimal downtime.</p>
 <h2>Addressing Common Appliance Concerns in Los Angeles</h2>
 <p>Los Angeles residents frequently face appliance issues like cooling problems in refrigerators, drainage issues in dishwashers, and heating failures in ovens. Timely and effective repairs are crucial for restoring functionality and convenience to your daily life.</p>
