--- a/src/pages/areas/los-angeles-and-surrounding-areas.astro
+++ b/src/pages/areas/los-angeles-and-surrounding-areas.astro
@@ -147,13 +147,13 @@ import Layout from "@layouts/Layout.astro";
   </span>
   </div>
   
-
+  <div style="background-color:#F2F1F0">
 <h2 id="commercial-appliance-repair">Commercial Appliance Repairs for Businesses</h2>
 <a href="#top"><img loading="lazy" alt="go back to the top of the page" width="50" height="50" src="/images/back_to_top.png"></a>
 <div class="six-col-grid">
   <span class="col-one-img">
   <img width="120" height="150" loading="lazy" src="/../images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
-  <p>Refrigerator Repair</p>
+  <p><a title="Commercial Refrigerator Repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles">Refrigerator Repair</a></p>
   <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
   </span>
   <span class="col-two-img">
@@ -237,17 +237,10 @@ import Layout from "@layouts/Layout.astro";
   <a class="grid-a" title="Same day wine cellar repair Los Angeles" href="/book">BOOK US </a>
   </span>
   </div>
-  <div>
-  
-
+</div>
 <p>We understand that repairing commercial appliances can be challenging due to their larger size and complexity compared to household ones. Hence, our technicians undergo specialized training in order to effectively troubleshoot any issues with your appliances. Whether it’s a malfunctioning refrigerator at your restaurant or an office printer causing disruptions, you can rely on us for prompt solutions from experienced professionals.</p>
-
 <h2 id="heating">Heating Ventilation And Air-Conditioning Service, Repair And Installation</h2><a href="#top"><img loading="lazy" alt="Go back to the top of the page" width="50" height="50" src="/images/back_to_top.png"></a>
-
 <p>Expert repair and installation of heating ventilation and AC by our trained technicians</p>
-
-<br>
-
 <br>
 <div class="six-col-grid">
 <span class="col-one-img">
