--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -118,18 +118,18 @@ import Contactbtn from "@components/contactbtn.astro";
 
 <!-- Grey BG-->
 <div style="background-color:#F2F1F0">
-<h3 id="commercial-appliance-repair">Commercial Appliance Repairs for Businesses</h3>
+<h2 id="commercial-appliance-repair">Commercial Appliance Repairs for Businesses</h2>
 <div class="six-col-grid">
     <span class="col-one-img">
                         <img width="120" height="150" loading="lazy" src="/../images/commercial-refrigerator-repair.webp" alt="Same day commercial refrigerator repair - Los Angeles">
-                        <p>Refrigerator Repair</p>
-                            <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
+                        <p><a title="Commercial Refrigerator Repair Los Angeles" href="/services/commercial-refrigerator-repair-los-angeles">Refrigerator Repair</a></p>
+                            <a class="grid-a" title="Book an appointment with Same Day Appliance Repair" href="/book">BOOK US </a>
                           </span>
   
                     <span class="col-two-img">
                         <img width="120" height="150" loading="lazy" src="/../images/commercial-frreezer-repair.webp" alt="Same day commercial freezer repair - Los Angeles">
                         <p>Freezer Repair</p>
-                             <a class="grid-a" title="Same day refrigerator repair Los Angeles" href="/book">BOOK US </a>
+                             <a class="grid-a" title="Book an appointment with Same Day Appliance Repair href="/book">BOOK US </a>
                           </span>
                     
                     <span class="col-three-img">
@@ -141,19 +141,19 @@ import Contactbtn from "@components/contactbtn.astro";
                     <span class="col-four-img">
       <img width="120" height="150" loading="lazy" src="/../images/commercial-dryer-repair.webp" alt="Same day commercial dryer repair - Los Angeles">
       <p>Dryer Repair</p>
-      <a class="grid-a" title="Same day dryer repair Los Angeles" href="/book">BOOK US</a>
+      <a class="grid-a" title="Book an appointment with Same Day Appliance Repair" href="/book">BOOK US</a>
   </span>
                     
                     <span class="col-five-img">
       <img width="120" height="150" loading="lazy" src="/../images/commercial-stove-repair.webp" alt="Same day commercial stove repair - Los Angeles">
       <p>Stove Repair</p>
-      <a class="grid-a" title="Same day stove repair Los Angeles" href="/book">BOOK US </a>
+      <a class="grid-a" title="Book an appointment with Same Day Appliance Repair" href="/book">BOOK US </a>
   </span>
                     
                     <span class="col-six-img">
       <img width="120" height="150" loading="lazy" src="/../images/commercial-dishwasher-repair.webp" alt="Same day commercial dishwasher repair - Los Angeles">
       <p>Dishwasher Repair</p>
-      <a class="grid-a" title="Same day dishwasher repair Los Angeles" href="/book">BOOK US </a>
+      <a class="grid-a" title="Book an appointment with Same Day Appliance Repair" href="/book">BOOK US </a>
   </span>
                     <span class="col-seven-img">
       <img width="120" height="150" loading="lazy" src="/../images/commercial-oven-repair.webp" alt="Same day commercial oven repair - Los Angeles">
@@ -215,7 +215,7 @@ import Contactbtn from "@components/contactbtn.astro";
       <a class="grid-a" title="Same day wine cellar repair Los Angeles" href="/book">BOOK US </a>
   </span>
             </div>
-      <div>
+        </div>
 
 
 <p>We understand that repairing commercial appliances can be challenging due to their larger size and complexity compared to household ones. Hence, our technicians undergo specialized training in order to effectively troubleshoot any issues with your appliances. Whether it’s a malfunctioning refrigerator at your restaurant or an office printer causing disruptions, you can rely on us for prompt solutions from experienced professionals.</p>
@@ -255,7 +255,7 @@ import Contactbtn from "@components/contactbtn.astro";
                         <p>Ducts Cleaning Repair</p>
                         <a class="grid-a" title="Same day wall heater repair Los Angeles" href="/book">BOOK US </a>
                       </span>
-                                        </div>
+                                        </div></div>
 <p>Business operations rely on functional commercial appliances. We provide prompt, effective repairs tailored to the specific needs of businesses, understanding the importance of minimal downtime.</p>
 <h2>Addressing Common Appliance Concerns in Los Angeles</h2>
 <p>Los Angeles residents frequently face appliance issues like cooling problems in refrigerators, drainage issues in dishwashers, and heating failures in ovens. Timely and effective repairs are crucial for restoring functionality and convenience to your daily life.</p>
